# egglog_repro

./: Cargo.toml  README.md  gemma.egg  gemma4_moe.egg  llama.egg  paged_llama.egg  qwen.egg  qwen3_moe.egg  qwen_all_cublaslt_rules.egg  qwen_minimal.egg  qwen_one_cublaslt_rule.egg  whisper.egg
results/: timing_mean_ci.csv  timing_percent_change.csv  timings_scatter.csv  timings_scatter.vl.json
scripts/: append_current_main_no_decomp_timing.sh  append_pr896_no_decomp_timing.sh  compute_timing_mean_ci.mjs  compute_timing_percent_change.mjs  render_timing_scatter.sh  timing_percent_change.vl.json  timings_scatter.vl.json
src/: main.rs
